--- a/thesis/6-summary.tex
+++ b/thesis/6-summary.tex
@@ -1,16 +1,17 @@
 
-\chapter{Podsumowanie i wnioski}
+\chapter{Summary and conclusions}
 
-Celem pracy było zapoznanie i zaciekawienie czytelnika tematem efektów algebraicznych i uchwytów oraz zaprezentowanie nowej implementacji systemów kompilacji podążając krokami autorów \BSaLC{}. Implementacja w eksperymentalnym języku Helium miała zademonstrować, jak wygląda programowanie z efektami algebraicznymi i uchwytami oraz umożliwić zaobserwowanie, jak różni się ono od radzenia sobie z efektami ubocznymi przez użycie monad w języku Haskell.
+The aim of this work was to introduce the reader and get interested in the subject of algebraic effects and handlers as well as to present new implementation of build systems following the steps of \BSaLC{}'s authors. The implementation in an experimental language Helium intended not only to demonstrate how programming with algebraic effect and handlers looks but also to observe how it differs from dealing with computation effects using monads in Haskell.
 
-Traktując \helinl{fetch} jako operację efektu ubocznego kompilacji, a nie jako argument do zadania, udało się nam wykorzystać możliwości języka z efektami i uchwytami w centralnej części implementacji systemów kompilacji.
+Thanks to treating \helinl{fetch} as an effectful operation of building, and not as a task's argument, we were able to use capabilities of the language with effect and handlers in the central part of build systems implementation.
 
-Uzyskana -- dzięki programowaniu z efektami i uchwytami, a nie monadami -- swoboda użycia wielu efektów jednocześnie uspokoiła nasze obawy i zachęciła do eksperymentowania. Etykietowanie różnych instancji tego samego efektu umożliwiło utrzymywanie w modyfikowalnym stanie wielu wartości bez szkody dla czytelności oraz rozumieniu kodu. Dało to też możliwość tworzenia pośredników między różnymi efektami. % (\helinl{embedState}, funkcja \helinl{track}).
+Gained -- due to programming with effects and handlers instead of monads -- freedom of using multiple effects at the same time calmed our fears and encouraged us to experiment. Labelling of different instances of the same effect enabled us to maintain multiple values in mutable state without loss of readability or understanding of the source code. It let us create proxies between different effects.
 
-Reprezentacja zasobu, nad którym odbywała się kompilacja jako efektu ubocznego, nie tylko zapobiegła potrzebie każdorazowego umieszczania go w modyfikowalnym stanie, ale także lepiej oddała jego naturę bycia trwałym i zewnętrznym tworem.
+Representation of store, which was the object that build systems work on, as a side effect not only prevented us from needing to hold it in a mutable state, but also better showed its nature of being a persistent and external resource.
 
-Tym, co utraciliśmy, była precyzja opisu skomplikowania relacji między zadaniami. Transparentność wyników operacji z efektami, w porównaniu do ,,opakowywania'' ich instancjami funktorów aplikatywnych lub monad, uniemożliwiła łatwe reprezentowanie zadań o statycznych zależnościach.
+What we lost, was precision in describing level of dependencies between tasks. Transparency in results of effectful operations, compared to wrapping the values with instances of applicative functors or monads, prevented easy representation of tasks with static dependencies.
 
-Problem ten był jednak łatwy do zauważenia już na początku rozważań nad własną implementacją \BSaLC{}. Oprócz tego, w czasie implementowania systemów kompilacji, autor nie napotkał znacznych trudności w programowaniu z efektami algebraicznymi i uchwytami. Pozostałe były związane z ograniczonym doświadczeniem autora z językiem Helium lub eksperymentalną naturą języka i chwilowymi problemami środowiska uruchomieniowego z klarownym objaśnieniem źródła niezgodności typów.
+This problem however, was easy to spot from the start of working on own implementation of results from \BSaLC{}. Apart from that, during implementation process of build systems, the author didn't encounter any substantial obstacles in programming with algebraic effects and handlers. Others were related to limited experience of the author with Helium, experimental nature of this language and momentary issues of runtime environment with clear explanation where type mismatches came from.
 
-Podsumowując, programowanie z efektami algebraicznymi i uchwytami jest możliwe, jest przyjemne i uwalnia autora od ograniczeń, które dotychczas wydawały się nie do uniknięcia. Jak zobaczyliśmy, można spróbować powtórzyć wyniki przeprowadzone w znanym funkcyjnym języku programowania i z zachwytem odkryć, że implementacja z efektami i uchwytami jest równie interesująca.
+In summary, programming with algebraic effects and handlers is possible, is enjoyable and frees the author from limitations, that until now seemed to be impossible to avoid. As we have seen, one can try to repeat results done in a popular functional programming language, and with delight discover that implementation using effects and handlers is equally fascinating.
+
